fix: animation position on mobile

--- a/src/styles/_homepage.styl
+++ b/src/styles/_homepage.styl
@@ -79,6 +79,7 @@
 			position static
 			width 100%
 			transform translateY(10%)
+			margin-top -4rem
 			
 			> *
 				margin 0 auto
@@ -134,9 +135,6 @@
 		// 	width 6.25rem // 100px
 		// 	height .25rem // 4px
 		// 	background-color $clr-lighter
-
-	.panel--layer
-		padding-top: 3rem
 
 	.stores
 		margin-top 1.5rem
